Update print statement from 'Hello' to 'Goodbye'

--- a/programacao_aplicacao.html
+++ b/programacao_aplicacao.html
@@ -88,9 +88,10 @@
                 <option>Ailton Gabriel</option>
                 <option>Yuri Joudran</option>
                 <option>Pedro Henrique</option>
-                <option>Jefferson Lopes</option>
+                <option>Gustavo Rodrigues</option>
                 <option>Jonathan Vieira</option>
                 <option>Luiz Gustavo</option>
+                <option>Hilton</option>
               </select>
             </div>
 
@@ -450,4 +451,5 @@
 </script>
 </body>
 </html>
+
 
