--- a/status_operacional_aplicacao.html
+++ b/status_operacional_aplicacao.html
@@ -65,9 +65,10 @@
                 <option>Ailton Gabriel</option>
                 <option>Yuri Joudran</option>
                 <option>Pedro Henrique</option>
-                <option>Jefferson Lopes</option>
+                <option>Gustavo Rodrigues</option>
                 <option>Jonathan Vieira</option>
                 <option>Luiz Gustavo</option>
+                <option>Hilton</option>
               </select>
             </div>
             <div class="col-md-4">
@@ -126,8 +127,8 @@
 const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbw0wYo2B8wXXv_SqVwVayNkDtG_UsroXNXfLk970sHff6cIXnayykA3DYqtrt0ldefP/exec';
 
 const FRentesPilotos = {
-  'Frente 1':'Matheus Pias','Frente 2':'Maicon Silva','Frente 3':'Alexandre Alves',
-  'Frente 4':'Felipe Santos','Frente 5':'Luiz Paulo','Frente 6':'Sem Piloto Cadastrado','Frente 7':'Heitor Ferreira'
+  'Frente 1':'Matheus Pias','Frente 2':'Jefferson','Frente 3':'Alexandre Alves',
+  'Frente 4':'Hallef','Frente 5':'Luiz Paulo','Frente 6':'Caio','Frente 7':'Heitor Ferreira'
 };
 
 document.getElementById('frente').addEventListener('change',e=>{
@@ -296,3 +297,4 @@ _______________`;
 </script>
 </body>
 </html>
+
