Update print statement from 'Hello' to 'Goodbye'

--- a/rendimento_aplicacao.html
+++ b/rendimento_aplicacao.html
@@ -88,9 +88,10 @@
                 <option>Ailton Gabriel</option>
                 <option>Yuri Joudran</option>
                 <option>Pedro Henrique</option>
-                <option>Jefferson Lopes</option>
+                <option>Gustavo Rodrigues</option>
                 <option>Jonathan Vieira</option>
                 <option>Luiz Gustavo</option>
+                <option>Hilton</option>
               </select>
             </div>
 
@@ -179,9 +180,7 @@
   const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbw0wYo2B8wXXv_SqVwVayNkDtG_UsroXNXfLk970sHff6cIXnayykA3DYqtrt0ldefP/exec';
 
   const FRentesPilotos = {
-    'Frente 1':'Matheus Pias','Frente 2':'Maicon Silva','Frente 3':'Alexandre Alves',
-    'Frente 4':'Felipe Santos','Frente 5':'Luiz Paulo','Frente 6':'Sem Piloto Cadastrado na Frente','Frente 7':'Heitor Ferreira'
-  };
+    'Frente 1':'Matheus Pias','Frente 2':'Jefferson','Frente 3':'Alexandre Alves','Frente 4':'Hallef','Frente 5':'Luiz Paulo','Frente 6':'Caio','Frente 7':'Heitor Ferreira'};
   const UnidadesPorEstado = {
     'MG':['Delta - Delta','Delta - Volta Grande','Florestadora - Santa Cecília (João Pinheiro - MG)','Parque de Bioenergia Lagoa da Prata (Lagoa da Prata - MG)'],
     'SP':['Usina Gasa (Andradina - SP)','Usina Rafard (Rafard - SP)','Usina São Francisco (Elias Fausto - SP)','Usina Barra Bonita (Barra Bonita - SP)','Usina Costa Pinto (Piracicaba - SP)','Usina Leme (Leme - SP)','Usina Destivale (Araçatuba - SP)','Usina Mundial (Mirandópolis - SP)','Usina Ipaussu (Ipaussu - SP)','Usina Diamante (Jaú - SP)','Usina Univalem (Valparaíso - SP)','Usina Benálcool (Bento de Abreu - SP)']
@@ -647,6 +646,7 @@ ${talhoesTxt.length ? talhoesTxt.join('\n') : '-'}
 </script>
 </body>
 </html>
+
 
 
 
