--- a/ranking.piloto.html
+++ b/ranking.piloto.html
@@ -1,153 +1,379 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página em Construção | Pulvion</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Portal DJI — Admin (VS Code)</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
+    :root {
+      --bg: #060912;
+      --card: #0c1224;
+      --text: #f5f5f5;
+      --muted: #cbd5e1;
+      --accent: #d9b24c;
+      --border: rgba(217,178,76,0.35);
+      --input-bg: #0f1628;
+    }
     body {
-      background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-      min-height: 100vh;
-      margin: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-family: 'Montserrat', Arial, sans-serif;
-      overflow: hidden;
+      background:
+        radial-gradient(circle at 10% 20%, rgba(217,178,76,0.08), transparent 32%),
+        radial-gradient(circle at 80% 0%, rgba(255,255,255,0.08), transparent 38%),
+        var(--bg);
+      color: var(--text);
     }
-    /* SVG ferramentas no fundo */
-    .svg-bg-tools {
-      position: fixed;
-      top: 0; left: 0; width: 100vw; height: 100vh;
-      z-index: 0;
-      pointer-events: none;
-      opacity: 0.18;
+    .card {
+      background: linear-gradient(135deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02));
+      border: 1px solid var(--border);
+      color: var(--text);
+      box-shadow: 0 18px 36px rgba(0,0,0,0.28);
+      border-radius: 16px;
     }
-    .container {
-      position: relative;
-      background: rgba(255,255,255,0.95);
-      border-radius: 18px;
-      box-shadow: 0 8px 32px rgba(0,0,0,0.12);
-      padding: 48px 32px 32px 32px;
-      text-align: center;
-      max-width: 400px;
-      width: 100%;
-      overflow: hidden;
-      z-index: 1;
-      animation: card-swing 3.5s cubic-bezier(.36,1.6,.64,1) infinite alternate;
+    .text-secondary, .form-text { color: var(--muted) !important; }
+    .form-control, .form-select {
+      background: var(--input-bg);
+      color: var(--text);
+      border: 1px solid var(--border);
     }
-    @keyframes card-swing {
-      0% { transform: rotate(-2deg) scale(1.01); }
-      50% { transform: rotate(2deg) scale(1.015); }
-      100% { transform: rotate(-2deg) scale(1.01); }
+    .form-control::placeholder { color: #94a3b8; }
+    .form-control:focus, .form-select:focus {
+      background: var(--input-bg);
+      color: #fff;
+      border-color: var(--accent);
+      box-shadow: 0 0 0 0.15rem rgba(217,178,76,0.2);
     }
-    /* Removido bg-svg do card */
-    .logo {
-      width: 120px;
-      margin-bottom: 24px;
-      filter: drop-shadow(0 2px 8px rgba(0,0,0,0.10));
-      position: relative;
-      z-index: 1;
-    }
-    h1, .construction, p {
-      position: relative;
-      z-index: 1;
-    }
-    .construction {
-      font-size: 3.5rem;
-      color: #d9b24c;
-      margin: 24px 0 12px 0;
-      letter-spacing: 2px;
+    .btn-success {
+      background: var(--accent);
+      border-color: #c69f32;
+      color: #0b0f1f;
       font-weight: 700;
-      text-shadow: 0 2px 8px rgba(217,178,76,0.10);
     }
-    /* SVG Animations */
-    .tech-c1 {
-      animation: move-c1 6s linear infinite alternate;
+    .btn-outline-dark {
+      border-color: var(--border);
+      color: var(--text);
+      background: rgba(255,255,255,0.04);
+      font-weight: 700;
     }
-    .tech-c2 {
-      animation: move-c2 7s linear infinite alternate;
+    .btn-outline-dark:hover { background: rgba(217,178,76,0.18); color: #0b0f1f; border-color: var(--accent); }
+    .badge.text-bg-success {
+      background: rgba(217,178,76,0.18) !important;
+      color: var(--text);
+      border: 1px solid var(--border);
     }
-    .tech-r1 {
-      animation: move-r1 8s ease-in-out infinite alternate;
+    .alert-info { background: rgba(56,189,248,0.12); border-color: rgba(56,189,248,0.35); color: #dbeafe; }
+    .alert-danger { background: rgba(239,68,68,0.1); border-color: rgba(239,68,68,0.35); color: #fecdd3; }
+    .table thead th {
+      background: rgba(205,157,31,1);
+      color: #0b0f1f;
+      border-bottom: none;
     }
-    .tech-r2 {
-      animation: move-r2 9s ease-in-out infinite alternate;
+    .table tbody td {
+      background: rgba(255,255,255,0.02);
+      color: var(--text);
+      border-color: rgba(255,255,255,0.05);
     }
-    .tech-line1 {
-      stroke-dasharray: 400;
-      stroke-dashoffset: 400;
-      animation: dash-line1 5s linear infinite;
-    }
-    .tech-line2 {
-      stroke-dasharray: 400;
-      stroke-dashoffset: 400;
-      animation: dash-line2 6s linear infinite;
-    }
-    @keyframes move-c1 {
-      0% { transform: translate(0,0) scale(1); }
-      100% { transform: translate(20px, 10px) scale(1.08); }
-    }
-    @keyframes move-c2 {
-      0% { transform: translate(0,0) scale(1); }
-      100% { transform: translate(-18px, -12px) scale(1.12); }
-    }
-    @keyframes move-r1 {
-      0% { transform: rotate(0deg) translate(0,0); }
-      100% { transform: rotate(8deg) translate(10px,-8px); }
-    }
-    @keyframes move-r2 {
-      0% { transform: rotate(0deg) translate(0,0); }
-      100% { transform: rotate(-10deg) translate(-8px,12px); }
-    }
-    @keyframes dash-line1 {
-      0% { stroke-dashoffset: 400; }
-      100% { stroke-dashoffset: 0; }
-    }
-    @keyframes dash-line2 {
-      0% { stroke-dashoffset: 400; }
-      100% { stroke-dashoffset: 0; }
-    }
+    .table-hover tbody tr:hover td { background: rgba(217,178,76,0.08); }
   </style>
 </head>
-<body>
-  <!-- SVGs de ferramentas animadas no fundo -->
-  <svg class="svg-bg-tools" width="100vw" height="100vh" viewBox="0 0 1440 900" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <g style="transform-origin: 200px 200px; animation: hammer-rotate 7s linear infinite alternate;">
-      <rect x="180" y="120" width="40" height="120" rx="12" fill="#b0a16b"/>
-      <rect x="170" y="110" width="60" height="30" rx="8" fill="#888"/>
-      <rect x="170" y="230" width="60" height="18" rx="6" fill="#888"/>
-    </g>
-    <g style="transform-origin: 1200px 700px; animation: wrench-rotate 9s ease-in-out infinite alternate;">
-      <rect x="1180" y="650" width="40" height="120" rx="12" fill="#b0a16b"/>
-      <ellipse cx="1200" cy="650" rx="28" ry="18" fill="#888"/>
-      <rect x="1190" y="770" width="20" height="30" rx="6" fill="#888"/>
-    </g>
-    <g style="transform-origin: 700px 400px; animation: screwdriver-rotate 11s ease-in-out infinite alternate;">
-      <rect x="690" y="350" width="20" height="80" rx="6" fill="#b0a16b"/>
-      <polygon points="690,350 710,350 700,320" fill="#888"/>
-    </g>
-  </svg>
-  <div class="container">
-    <img src="logo_pulvion_preta.png" alt="Logo Pulvion" class="logo">
-    <div class="construction">🚧</div>
-    <h1>Página em Construção</h1>
-    <p>Estamos trabalhando para trazer novidades.<br>Volte em breve!</p>
+
+<body class="bg-body-tertiary" style="--bs-bg-opacity:1; background-color: #000 !important;">
+  <div class="container my-4">
+    <div class="d-flex align-items-center justify-content-between mb-3">
+      <h4 class="mb-0">Portal DJI — Upload Semanal (Admin)</h4>
+      <span class="badge text-bg-success">Central atualiza sozinha</span>
+    </div>
+
+    <div class="card shadow-sm">
+      <div class="card-body">
+        <label class="form-label fw-semibold">Enviar planilha DJI (XLSX)</label>
+        <input id="file" type="file" class="form-control" accept=".xlsx,.xls" />
+
+        <div class="d-flex gap-2 mt-3 flex-wrap">
+          <button id="btnUpload" class="btn btn-success flex-grow-1" disabled>Importar para CENTRAL</button>
+
+          <select id="period" class="form-select" style="max-width:220px;">
+            <option value="all">Ranking: tudo</option>
+            <option value="7" selected>Últimos 7 dias</option>
+            <option value="30">Últimos 30 dias</option>
+            <option value="90">Últimos 90 dias</option>
+          </select>
+
+          <button id="btnRanking" class="btn btn-outline-dark" style="min-width:160px;">Ver ranking</button>
+        </div>
+
+        <div class="row g-2 mt-2">
+          <div class="col-6">
+            <label class="form-label fw-semibold mb-1">Data inicial</label>
+            <input id="dateFrom" type="date" class="form-control" />
+          </div>
+          <div class="col-6">
+            <label class="form-label fw-semibold mb-1">Data final</label>
+            <input id="dateTo" type="date" class="form-control" />
+          </div>
+        </div>
+
+        <div id="msg" class="alert alert-info mt-3 d-none"></div>
+
+        <div class="form-text mt-2">
+          
+        </div>
+      </div>
+    </div>
+
+    <div class="card shadow-sm mt-3">
+      <div class="card-body">
+        <h6 class="fw-semibold mb-2">Ranking (preview)</h6>
+        <div class="d-flex flex-wrap justify-content-between align-items-center mb-2">
+          <div class="text-secondary small" id="subtitle">Aguardando…</div>
+          <div class="fw-semibold" id="totals">Área total: -- ha</div>
+        </div>
+        <div class="mb-2">
+          <input id="search" class="form-control" placeholder="Filtrar por piloto..." />
+        </div>
+        <div class="table-responsive">
+          <table class="table table-hover align-middle mb-0">
+            <thead class="table-light">
+              <tr>
+                <th>#</th><th>Piloto</th>
+                <th class="text-end">Voos</th>
+                <th class="text-end">Área (ha)</th>
+                <th class="text-end">Volume (L)</th>
+                <th class="text-end">Tempo (min)</th>
+                <th class="text-end">L/ha</th>
+                <th class="text-end">ha/voo</th>
+              </tr>
+            </thead>
+            <tbody id="tb">
+              <tr><td colspan="8" class="text-secondary">Carregue dados para ver o ranking.</td></tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+
   </div>
-  <style>
-    @keyframes hammer-rotate {
-      0% { transform: rotate(-10deg); }
-      100% { transform: rotate(12deg); }
+
+<script>
+  // ✅ SUA URL DO WEB APP
+  const WEBAPP_URL = "https://script.google.com/macros/s/AKfycby1vZSlo0QbWkonHAsstQhVZNGI9R6IwN8GUgAVNuywRVTculgmaZ4_usklWnVHMwIBdA/exec";
+
+  const fileEl = document.getElementById("file");
+  const btnUpload = document.getElementById("btnUpload");
+  const btnRanking = document.getElementById("btnRanking");
+  const msg = document.getElementById("msg");
+  const tb = document.getElementById("tb");
+  const periodEl = document.getElementById("period");
+  const subtitleEl = document.getElementById("subtitle");
+  const totalsEl = document.getElementById("totals");
+  const dateFromEl = document.getElementById("dateFrom");
+  const dateToEl = document.getElementById("dateTo");
+  const searchEl = document.getElementById("search");
+
+  function show(text, type="info"){
+    msg.className = `alert alert-${type} mt-3`;
+    msg.textContent = text;
+    msg.classList.remove("d-none");
+  }
+  function hide(){ msg.classList.add("d-none"); }
+
+  fileEl.addEventListener("change", () => {
+    btnUpload.disabled = !fileEl.files?.[0];
+  });
+
+  btnUpload.addEventListener("click", async () => {
+    const f = fileEl.files?.[0];
+    if (!f) return;
+
+    hide();
+    show("Lendo arquivo…", "info");
+
+    const base64 = await toBase64(f);
+
+    show("Enviando para CENTRAL (POST)…", "info");
+
+    try {
+      // POST simples (sem preflight) para evitar CORS
+      const payload = JSON.stringify({
+        action: "uploadAndImportXlsx",
+        fileName: f.name,
+        base64Data: base64
+      });
+
+      const res = await fetch(WEBAPP_URL, {
+        method: "POST",
+        headers: { "Content-Type": "text/plain;charset=utf-8" },
+        body: payload
+      });
+
+      const data = await res.json();
+
+      if (!data.ok) {
+        show(data.message || "Falha ao importar.", "danger");
+        return;
+      }
+
+      show(`Importado! Inseridos: ${data.inserted} | Duplicados ignorados: ${data.duplicates} | Linhas no arquivo: ${data.totalInFile}`, "success");
+
+        await loadRanking(); // atualiza preview
+
+    } catch (err) {
+      console.error(err);
+      show("Erro no upload (POST): " + (err.message || err), "danger");
     }
-    @keyframes wrench-rotate {
-      0% { transform: rotate(8deg); }
-      100% { transform: rotate(-14deg); }
+  });
+
+
+    // Carregar ranking dos últimos 7 dias ao abrir a página
+    window.addEventListener("DOMContentLoaded", () => {
+      periodEl.value = "7";
+      loadRanking();
+    });
+
+    btnRanking.addEventListener("click", loadRanking);
+    dateFromEl.addEventListener("change", () => render(currentRows));
+    dateToEl.addEventListener("change", () => render(currentRows));
+    searchEl.addEventListener("input", () => render(currentRows));
+
+  async function loadRanking(){
+    hide();
+    const period = periodEl.value;
+    const from = dateFromEl.value;
+    const to = dateToEl.value;
+    show("Gerando ranking…", "info");
+
+    try {
+      // Se datas customizadas forem selecionadas, ignora o filtro de período
+      let params = { action: "getRanking" };
+      if (from || to) {
+        if (from) params.dateFrom = from;
+        if (to) params.dateTo = to;
+      } else {
+        params.periodDays = period;
+      }
+      const rows = await jsonp(WEBAPP_URL, params);
+      render(rows || []);
+      show("Ranking atualizado.", "success");
+    } catch (err) {
+      console.error(err);
+      show("Erro no ranking (JSONP): " + (err.message || err), "danger");
     }
-    @keyframes screwdriver-rotate {
-      0% { transform: rotate(-6deg); }
-      100% { transform: rotate(10deg); }
+  }
+
+  function render(rows){
+    const from = dateFromEl.value ? new Date(dateFromEl.value + "T00:00:00") : null;
+    const to = dateToEl.value ? new Date(dateToEl.value + "T23:59:59") : null;
+    const parseDate = (val) => {
+      if (!val) return null;
+      // se vier intervalo "2026-01-07 16:07:56-16:19:06", usa a parte antes do traço
+      const firstPart = String(val).split("-")[0].trim();
+      const d1 = new Date(firstPart);
+      if (!isNaN(d1.getTime())) return d1;
+      const m = String(val).match(/^(\d{1,2})\/(\d{1,2})\/(\d{2,4})/);
+      if (m) {
+        const dd = Number(m[1]), mm = Number(m[2]) - 1, yy = m[3].length === 2 ? Number("20"+m[3]) : Number(m[3]);
+        const d2 = new Date(yy, mm, dd);
+        return isNaN(d2.getTime()) ? null : d2;
+      }
+      return null;
+    };
+
+    const q = (searchEl.value || "").trim().toLowerCase();
+
+    const filtered = rows.filter(r => {
+      if (q && !String(r.pilot || "").toLowerCase().includes(q)) return false;
+      const dateField =
+        r.date ?? r.data ?? r.dt ?? r.flightTime ?? r["flight time"] ?? r["Flight time"] ?? r["Flight Time"];
+      const d = parseDate(dateField);
+      if (from && d && d < from) return false;
+      if (to && d && d > to) return false;
+      return true;
+    });
+
+    tb.innerHTML = "";
+    if (!filtered.length){
+      tb.innerHTML = `<tr><td colspan="8" class="text-secondary">Sem dados no período.</td></tr>`;
+      totalsEl.textContent = "Área total: -- ha";
+      subtitleEl.textContent = `Pilotos: 0 · Período: ${periodEl.value === "all" ? "Tudo" : `Últimos ${periodEl.value} dias`}`;
+      return;
     }
-  </style>
+
+    let totalArea = 0;
+
+    filtered.forEach((r, i) => {
+      const areaNum = Number(String(r.area ?? 0).replace(",", "."));
+      totalArea += isNaN(areaNum) ? 0 : areaNum;
+      const tr = document.createElement("tr");
+      tr.innerHTML = `
+        <td class="fw-semibold">${i+1}</td>
+        <td>${esc(r.pilot)}</td>
+        <td class="text-end">${fmt(r.flights,0)}</td>
+        <td class="text-end">${fmt(r.area,2)}</td>
+        <td class="text-end">${fmt(r.volume,1)}</td>
+        <td class="text-end">${fmt(r.time,0)}</td>
+        <td class="text-end">${fmt(r.lpha,2)}</td>
+        <td class="text-end">${fmt(r.haPerFlight,2)}</td>
+      `;
+      tb.appendChild(tr);
+    });
+
+    totalsEl.textContent = `Área total: ${fmt(totalArea,2)} ha`;
+
+    const periodLabel = (() => {
+      if (from || to) {
+        const fmtDate = (d) => d ? d.toLocaleDateString("pt-BR") : "...";
+        return `Período: ${fmtDate(from)} a ${fmtDate(to)}`;
+      }
+      const p = periodEl.value;
+      return `Período: ${p === "all" ? "Tudo" : `Últimos ${p} dias`}`;
+    })();
+    subtitleEl.textContent = `Pilotos: ${filtered.length} · ${periodLabel}`;
+  }
+
+  function fmt(n, d){
+    const v = Number(n||0);
+    return v.toLocaleString("pt-BR",{minimumFractionDigits:d, maximumFractionDigits:d});
+  }
+
+  function esc(s){
+    return String(s ?? "").replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
+  }
+
+  function toBase64(file){
+    return new Promise((resolve,reject)=>{
+      const reader = new FileReader();
+      reader.onload = () => resolve(reader.result);
+      reader.onerror = reject;
+      reader.readAsDataURL(file);
+    });
+  }
+
+  // JSONP helper (para GET do ranking, evita CORS no GitHub)
+  function jsonp(baseUrl, params) {
+    return new Promise((resolve, reject) => {
+      const cb = "cb_" + Math.random().toString(36).slice(2);
+      params.callback = cb;
+
+      const url = baseUrl + "?" + new URLSearchParams(params).toString();
+      const script = document.createElement("script");
+
+      window[cb] = (data) => {
+        try { resolve(data); }
+        finally {
+          delete window[cb];
+          script.remove();
+        }
+      };
+
+      script.onerror = () => {
+        delete window[cb];
+        script.remove();
+        reject(new Error("Falha ao carregar JSONP"));
+      };
+
+      script.src = url;
+      document.body.appendChild(script);
+    });
+  }
+</script>
 </body>
 </html>
