--- a/painel_admin.html
+++ b/painel_admin.html
@@ -534,7 +534,7 @@
               <i class="nav-icon" data-lucide="search"></i>
               <span class="label">Busca KML/MAPA</span>
             </button>
-            <button class="nav-link" data-src="ranking/index.ranking.html" data-label="Upload Ranking">
+            <button class="nav-link" data-src="index.ranking.html" data-label="Upload Ranking">
               <i class="nav-icon" data-lucide="upload"></i>
               <span class="label">Upload Ranking</span>
             </button>
@@ -1040,6 +1040,7 @@
   </script>
 </body>
 </html>
+
 
 
 
