--- a/relatorios_cotesia.html
+++ b/relatorios_cotesia.html
@@ -190,7 +190,7 @@
   <div class="container">
     <div>
       <div class="header">
-        <img class="logo-left" src="https://i.imgur.com/AuO3E5y.png" alt="Logo Esquerda" />
+        <img class="logo-left" src="cresciumal.png" alt="Logo Esquerda" />
         <div class="title">RELATÓRIO DE APLICAÇÃO</div>
         <img class="logo-right" src="https://i.imgur.com/RMtSHww.png" alt="Logo Direita" />
       </div>
@@ -199,7 +199,7 @@
       <div class="grid">
         <div><label>Ordem de Serviço:</label><input id="os" type="text" /></div>
         <div><label>Data de Liberação:</label><input id="data" type="date" /></div>
-        <div><label>Piloto:</label><select id="piloto"><option value="Victor Hugo">Victor Hugo</option><option value="Guilherme">Guilherme</option></select></div>
+        <div><label>Piloto:</label><select id="piloto"><option value="Victor Hugo">Victor Hugo</option><option value="Guilherme">Guilherme</option><option value="Erick">Erick</option></select></div>
         <div><label>Distância percorrida pelo drone:</label><div id="distTotal" class="value">-</div></div>
         <div><label>Velocidade média de aplicação (m/s):</label><input id="velMedia" type="text" value="9~10 m/s" /></div>
         <div><label>Equipamento:</label><input id="equip" type="text" value="Xfly 800" /></div>
