--- a/index.html
+++ b/index.html
@@ -438,6 +438,7 @@
       <div class="logo-selo-bandeira-row">
         <img src="logo_pulvion.png" alt="Logo Pulvion" class="logo-fixa">
         <img src="logo_topgun.png" alt="Logo Top Gun" class="logo-fixa">
+        <img src="janeiro.branco.png" alt="Logo Top Gun" class="logo-fixa">
         <div class="flag-lock">
           <img src="https://flagcdn.com/w40/br.png" alt="Bandeira do Brasil" class="bandeira">
           <button type="button" class="lock-btn" id="lockButton" aria-label="Acesso restrito">
@@ -476,10 +477,9 @@
         <div class="container">
             <div class="row align-items-center min-vh-50">
                 <div class="col-lg-6">
-                    <h1 class="display-4 fw-bold mb-4">Bem-vindo ao Ano Novo 2026</h1>
+                    <h1 class="display-4 fw-bold mb-4">Bem-vindo(a)!</h1>
                     <p class="lead mb-4">
-                      Entramos em um novo ciclo com energia renovada: precisao aerea, seguranca e inovacao para acelerar sua producao neste Ano Novo.
-                      Conte conosco para transformar planejamento em resultados e celebrar colheitas ainda maiores em 2026.
+                      Pagina personalizada para gerenciamento de aplicação agrícola. Aqui você pode acessar ferramentas essenciais para otimizar suas operações de pulverização e cotésia, acompanhar seu desempenho e muito mais.
                     </p>
                 </div>
 
@@ -768,13 +768,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p class="mb-0">&copy; 2026 Pulvion Tech. Feliz Ano Novo! 🎆 Todos os direitos reservados.</p>
+                    <p class="mb-0">&copy; 2026 Pulvion Tech. Todos os direitos reservados.</p>
                 </div>
                 <div class="col-md-6 text-md-end">
                     <div class="social-links">
-                        <a href="https://www.instagram.com/topgunpulverizacoes.com/" class="text-white me-3"><i class="bi bi-instagram"></i></a>
-                        <a href="https://www.linkedin.com/company/top-gun-pulveriza%C3%A7%C3%B5es/" class="text-white me-3"><i class="bi bi-linkedin"></i></a>
-                        <a href="mailto:tgagro@pulverizacoes.com" class="text-white">
+                        <a href="https://www.instagram.com/davidcbcampos/" class="text-white me-3"><i class="bi bi-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/david-campos-26001425a/" class="text-white me-3"><i class="bi bi-linkedin"></i></a>
+                        <a href="mailto:david.ccalmeida@gmail.com" class="text-white">
                           <i class="bi bi-envelope"></i>
                         </a>
                         <a href="https://wa.me/5534998033258" class="text-white" target="_blank">
